dev-java/apache-karaf-bin: Review bootstrap script and conf